# cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: codeql.yml  release.yml
src/: api.rs  cache.rs  config.rs  display.rs  i18n.rs  main.rs
src/commands/: account.rs  add.rs  auth.rs  bulk_add.rs  collection.rs  compare.rs  completions.rs  deck.rs  deck_bracket.rs  export.rs  import.rs  market.rs  mod.rs  portfolio.rs  price.rs  random.rs  remove.rs  search.rs  settings.rs  stats.rs  trade.rs  update.rs  wantlist.rs
