[package]
name = "collected"
version = "0.3.3"
edition = "2021"
description = "CLI for collected.cards — manage your TCG collection from the terminal"
license = "MIT"
repository = "https://github.com/collected-cards/cli"

[[bin]]
name = "collected"
path = "src/main.rs"

[dependencies]
terminal_size = "0.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "6"
colored = "2"
enable-ansi-support = "0.2"
comfy-table = "7"
indicatif = "0.17"
dialoguer = "0.11"
anyhow = "1"
image = "0.24"
viuer = "0.7"
clap_complete = "4"
self_update = { version = "0.40", default-features = false, features = ["rustls"] }
rand = "0.8"
version-compare = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
